--- a/details.html
+++ b/details.html
@@ -104,6 +104,63 @@
                                 <a class="waves-effect waves-light btn-flat class-details right">Abrir</a>
                             </td>
                         </tr>
+                        <tr>
+                            <td>
+                                <span class="class-name">Paula Mayumi</span>
+                                <br> paula.konno@febracorp.org.br
+                            </td>
+                            <td>
+                                Cargo:
+                                <br> <span class="class-name">Assistente</span>
+                            </td>
+                            <td>
+                                Empresa:
+                                <br> <span class="class-name">Live University</span>
+                            </td>
+                            <td></td>
+                            <td>
+                                <a class="waves-effect waves-light btn-flat btn-amber class-details right">Remover</a>
+                                <a class="waves-effect waves-light btn-flat class-details right">Abrir</a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <span class="class-name">Paula Mayumi</span>
+                                <br> paula.konno@febracorp.org.br
+                            </td>
+                            <td>
+                                Cargo:
+                                <br> <span class="class-name">Assistente</span>
+                            </td>
+                            <td>
+                                Empresa:
+                                <br> <span class="class-name">Live University</span>
+                            </td>
+                            <td></td>
+                            <td>
+                                <a class="waves-effect waves-light btn-flat btn-amber class-details right">Remover</a>
+                                <a class="waves-effect waves-light btn-flat class-details right">Abrir</a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <span class="class-name">Paula Mayumi</span>
+                                <br> paula.konno@febracorp.org.br
+                            </td>
+                            <td>
+                                Cargo:
+                                <br> <span class="class-name">Assistente</span>
+                            </td>
+                            <td>
+                                Empresa:
+                                <br> <span class="class-name">Live University</span>
+                            </td>
+                            <td></td>
+                            <td>
+                                <a class="waves-effect waves-light btn-flat btn-amber class-details right">Remover</a>
+                                <a class="waves-effect waves-light btn-flat class-details right">Abrir</a>
+                            </td>
+                        </tr>
                     </tbody>
                 </table>
                 <span class="mobile-only">
