--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt">
 
 <head>
     <!-- JQuery / Materialize CSS + JavaScript imports -->
@@ -72,7 +72,7 @@
                                             </div>
                                         </td>
                                         <td>
-                                            <span class="class-name">14 práticas de compras</span>
+                                            <span class="class-name">14 pr&aacute;ticas de compras</span>
                                             <br> Legenda sobre o curso
                                         </td>
                                         <td>
@@ -92,7 +92,7 @@
                                             </div>
                                         </td>
                                         <td>
-                                            <span class="class-name">14 práticas de compras</span>
+                                            <span class="class-name">14 pr&aacute;ticas de compras</span>
                                             <br> Legenda sobre o curso
                                         </td>
                                         <td>
@@ -112,7 +112,7 @@
                                             </div>
                                         </td>
                                         <td>
-                                            <span class="class-name">14 práticas de compras</span>
+                                            <span class="class-name">14 pr&aacute;ticas de compras</span>
                                             <br> Legenda sobre o curso
                                         </td>
                                         <td>
@@ -132,7 +132,7 @@
                                             </div>
                                         </td>
                                         <td>
-                                            <span class="class-name">14 práticas de compras</span>
+                                            <span class="class-name">14 pr&aacute;ticas de compras</span>
                                             <br> Legenda sobre o curso
                                         </td>
                                         <td>
